--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.89.0",
+    "lucide-react": "0.378.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "1.3.0",
-    "recharts": "2.12.7",
-    "lucide-react": "0.378.0"
+    "recharts": "2.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
